Corrected missing file changes

--- a/src/header.html
+++ b/src/header.html
@@ -6,7 +6,11 @@
   <meta name="keywords" content="coltsin">
   <meta name="description" content="Coltsin es una comunidad orientada al desarrollo tecnologico en el estado de Sinaloa">
   <title>{{blog-name}}</title>
-  {{wp-header}}
+  <link rel="stylesheet" type="text/css" media="all" href="{{template-url}}/style.css">
+  <link rel="alternate" type="application/rss+xml" title="Suscribirse al Feed RSS de {{blog-name}}" href="{{rss-feed}}">
+  <link rel="alternate" type="application/atom+xml" title="Suscribirse al Feed Atom de {{blog-name}}" href="{{atom-feed}}">
+  <link rel="pingback" href="{{pingback-url}}">
+  {{{wp-header}}}
 </head>
 <body>
   <header>
